--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="CV/Photo_GizemALTAN.jpg" alt="Gizem's Profile Photo" style="width:128px;height:128px;"></td>
+      <td><img src="Photo_GizemALTAN.jpg" alt="Gizem's Profile Photo" style="width:128px;height:128px;"></td>
       <td><h1>Gizem Altan Attle</h1>
       <p><em><strong>MSc Software Engineer </strong>Student at <a href="https://www.city.ac.uk/"><strong>City University of London</strong></a></em></p>
       <p>I am a Backand and Front End Developer(Full-Stack Developer). I love playing chess, doing pilates and dancing.</p></td>
